# markitdown-cosense

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: check.yml  publish.yml
src/markitdown_cosense/: __init__.py  _plugin.py
tests/: test_cosense_notation.txt  test_plugin.py
tests/fixtures/: cosense_decision_table.json
tests/integration/: test_markitdown_plugin.py
tests/unit/: test_decision_table.py
